v 7.7.0
  -
  -
  - Add Jetbrains Teamcity CI service (Jason Lippert)
  -
  -
  - Mention notification level
  -
  -
  - OAuth applications feature
  -
  -
  - Set project path instead of project name in create form
  -
  -
  - New side navigation
  -
  -
  -
  - Add alert message in case of outdated browser (IE < 10)
  -
  - Added API support for sorting projects

v 7.6.0
  - Fork repository to groups
  - New rugged version
  - Add CRON=1 backup setting for quiet backups
  - Fix failing wiki restore
  - Add optional Sidekiq MemoryKiller middleware (enabled via SIDEKIQ_MAX_RSS env variable)
  - Monokai highlighting style now more faithful to original design (Mark Riedesel)
  - Create project with repository in synchrony
  - Added ability to create empty repo or import existing one if project does not have repository
  - Reactivate highlight.js language autodetection
  - Mobile UI improvements
  - Change maximum avatar file size from 100KB to 200KB
  - Strict validation for snippet file names
  - Enable Markdown preview for issues, merge requests, milestones, and notes (Vinnie Okada)
  - In the docker directory is a container template based on the Omnibus packages.
  - Update Sidekiq to version 2.17.8
  - Add author filter to project issues and merge requests pages
  - Atom feed for user activity
  - Support multiple omniauth providers for the same user
  - Rendering cross reference in issue title and tooltip for merge request
  - Show username in comments
  - Possibility to create Milestones or Labels when Issues are disabled
  - Fix bug with showing gpg signature in tag

v 7.5.2
  - Don't log Sidekiq arguments by default

v 7.5.0
  - API: Add support for Hipchat (Kevin Houdebert)
  - Add time zone configuration in gitlab.yml (Sullivan Senechal)
  - Fix LDAP authentication for Git HTTP access
  - Run 'GC.start' after every EmailsOnPushWorker job
  - Fix LDAP config lookup for provider 'ldap'
  - Drop all sequences during Postgres database restore