@@ -3,10 +3,15 @@ class Tree
 
   attr_accessor :entries, :readme, :contribution_guide
 
-  def initialize(repository, sha, path = '/')
+   def initialize(repository, sha, path = '/', recursive = 0)
     path = '/' if path.blank?
     git_repo = repository.raw_repository
-    @entries = Gitlab::Git::Tree.where(git_repo, sha, path)
+
+    if recursive == '1'
+      @entries = getRecursiveEntries(git_repo, sha, path)
+    else
+      @entries = Gitlab::Git::Tree.where(git_repo, sha, path)
+    end
 
     available_readmes = @entries.select(&:readme?)
 
@@ -34,6 +39,16 @@ class Tree
       @contribution_guide = Gitlab::Git::Blob.find(git_repo, sha, contribution_path)
     end
   end
+
+  def getRecursiveEntries(git_repo, sha, path)
+  	entries =  Gitlab::Git::Tree.where(git_repo, sha, path)
+
+  	entries.select(&:dir?).each do |t|
+  		entries += getRecursiveEntries(git_repo,sha,t.path)
+  	end
+
+  	return entries
+ 	end
 
   def trees
     @entries.select(&:dir?)
